name:                  postgrest
description:           Reads the schema of a PostgreSQL database and creates RESTful routes
                       for the tables and views, supporting all HTTP verbs that security
                       permits.
version:               5.2.0
synopsis:              REST API for any Postgres database
license:               MIT
license-file:          LICENSE
author:                Joe Nelson, Adam Baker
homepage:              https://postgrest.org
maintainer:            Steve Chávez <stevechavezast@gmail.com>
bug-reports:           https://github.com/PostgREST/postgrest/issues
category:              Executable, PostgreSQL, Network APIs
extra-source-files:    CHANGELOG.md
build-type:            Simple
cabal-version:         >=1.10
source-repository head
  type: git
  location: git://github.com/PostgREST/postgrest.git

Flag CI
  Description: No warnings allowed in continuous integration
  Manual:      True
  Default:     False

executable postgrest
  main-is:             Main.hs
  default-extensions:  OverloadedStrings, QuasiQuotes, NoImplicitPrelude
  ghc-options:
    -threaded
    -rtsopts
    "-with-rtsopts=-N -I2"
  default-language:    Haskell2010
  build-depends:       auto-update
                     , base >= 4.8
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , postgrest
                     , protolude
                     , text
                     , time
                     , warp
                     , bytestring
                     , base64-bytestring
                     , retry
  if !os(windows)
    build-depends:     unix

  hs-source-dirs:      main

library
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings, QuasiQuotes, NoImplicitPrelude
  build-depends:       aeson
                     , ansi-wl-pprint
                     , base >= 4.8
                     , base64-bytestring
                     , bytestring
                     , case-insensitive
                     , cassava
                     -- , configurator-ng
                     , containers
                     , contravariant
                     , contravariant-extras
                     , either
                     , gitrev
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , heredoc
                     , HTTP
                     , http-types
                     , insert-ordered-containers
                     , interpolatedstring-perl6
                     , jose
                     , lens
                     , lens-aeson
                     , network-uri
                     , optparse-applicative
                     , parsec
                     , protolude
                     -- , Ranged-sets
                     , HUnit
                     , QuickCheck
                     -- End for ranged sets
                     , regex-tdfa
                     , scientific
                     , swagger2
                     , text
                     , time
                     , unordered-containers
                     , vector
                     , wai
                     , wai-cors
                     , wai-extra
                     , wai-middleware-static
                     , cookie
                     -- Extra deps for Configurator
                     , attoparsec
                     , dlist
                     , directory
                     , data-ordlist
                     , fail
                     , hashable
                     , unix-compat
                     -- End for configurator
                     -- Extra deps for Critbit
                     , array
                     , deepseq
                     -- End extra deps for Critbit

  Other-Modules:       Paths_postgrest
                     , Data.Ranged.Boundaries
                     , Data.Ranged.Ranges
                     , Data.Configurator
                     , Data.Configurator.Config
                     , Data.Configurator.Config.Implementation
                     , Data.Configurator.Config.Internal
                     , Data.Configurator.FromValue
                     , Data.Configurator.FromValue.Implementation
                     , Data.Configurator.Parser
                     , Data.Configurator.Parser.Implementation
                     , Data.Configurator.Syntax
                     , Data.Configurator.Types
                     , Data.Configurator.Types.Internal
                     , Data.CritBit.Core
                     , Data.CritBit.Map.Lazy
                     , Data.CritBit.Tree
                     , Data.CritBit.Types.Internal
  Exposed-Modules:     PostgREST.ApiRequest
                     , PostgREST.App
                     , PostgREST.Auth
                     , PostgREST.Config
                     , PostgREST.DbStructure
                     , PostgREST.DbRequestBuilder
                     , PostgREST.Error
                     , PostgREST.Middleware
                     , PostgREST.OpenAPI
                     , PostgREST.Parsers
                     , PostgREST.QueryBuilder
                     , PostgREST.RangeQuery
                     , PostgREST.Types
  hs-source-dirs:      src

Test-Suite spec
  Type:                exitcode-stdio-1.0
  Default-Language:    Haskell2010
  default-extensions:  OverloadedStrings, QuasiQuotes, NoImplicitPrelude
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  Hs-Source-Dirs:      test
  Main-Is:             Main.hs
  Other-Modules:       Feature.AudienceJwtSecretSpec
                     , Feature.AuthSpec
                     , Feature.AsymmetricJwtSpec
                     , Feature.BinaryJwtSecretSpec
                     , Feature.ConcurrentSpec
                     , Feature.CorsSpec
                     , Feature.DeleteSpec
                     , Feature.ExtraSearchPathSpec
                     , Feature.InsertSpec
                     , Feature.JsonOperatorSpec
                     , Feature.NoJwtSpec
                     , Feature.PgVersion95Spec
                     , Feature.PgVersion96Spec
                     , Feature.ProxySpec
                     , Feature.QueryLimitedSpec
                     , Feature.QuerySpec
                     , Feature.RangeSpec
                     , Feature.SingularSpec
                     , Feature.StructureSpec
                     , Feature.UnicodeSpec
                     , Feature.AndOrParamsSpec
                     , Feature.RpcSpec
                     , Feature.NonexistentSchemaSpec
                     , Feature.UpsertSpec
                     , SpecHelper
                     , TestTypes
  Build-Depends:       aeson
                     , aeson-qq
                     , async
                     , auto-update
                     , base >= 4.8
                     , bytestring
                     , base64-bytestring
                     , case-insensitive
                     , cassava
                     , containers
                     , contravariant
                     , hasql
                     , hasql-pool
                     , hasql-transaction
                     , heredoc
                     , hjsonschema
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , lens
                     , lens-aeson
                     , monad-control
                     , postgrest
                     , process
                     , protolude
                     , regex-tdfa
                     , time
                     , transformers-base
                     , wai
                     , wai-extra
